#12 Wrapped textFlow in Group to avoid calculating its width manually

--- a/JavaFXPlayer/src/main/resources/ru/nsu/fit/markelov/css/player.css
+++ b/JavaFXPlayer/src/main/resources/ru/nsu/fit/markelov/css/player.css
@@ -20,7 +20,9 @@
 
 .subtitles {
     -fx-text-alignment: center;
+    -fx-padding: 6 24;
     -fx-background-color: rgba(0, 0, 0, 0.75);
+    visibility: hidden;
 }
 
 .controls {
